<resources>
    <string name="app_name" translatable="false">Nmedia app</string>
    <string name="nmedia">Nmedia!</string>
    <string name="description_post_author_avatar" translatable="false">Post author avatar</string>
    <string name="description_post_menu" translatable="false">Post menu</string>
    <string name="description_post_views" translatable="false">Post views</string>
    <string name="description_post_share" translatable="false">Post share</string>
    <string name="description_post_likes" translatable="false">Post likes</string>
    <string name="description_post_save" translatable="false">Save</string>
    <string name="menu_remove" translatable="false">Remove</string>
    <string name="post_text" translatable="false">Post Text</string>
    <string name="menu_edit" translatable="false">Edit</string>
    <string name="error_empty_content" translatable="false">Content can\'t be empty</string>
    <string name="description_post_editing" translatable="false">Edit message</string>
    <string name="description_post_editIc" translatable="false">Edit icon</string>
    <string name="description_post_close" translatable="false">Close</string>
    <string name="chooser_share_post" translatable="false">Share post</string>
    <string name="add_post" translatable="false">Add post</string>
    <string name="save" translatable="false">Save</string>
    <string name="description_video" translatable="false">video</string>
    <string name="google_play_unavailable" translatable="false">Google Api Unavailable</string>
    <string name="notification_user_liked" translatable="false">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name" translatable="false">Server notifications</string>
    <string name="channel_remote_description" translatable="false">Notifications from remote server</string>
    <string name="notification_new_post" translatable="false">%1$s published a new post:\n%2$s</string>
    <string name="error_loading" translatable="false">Something went wrong. Try again later</string>
    <string name="retry_loading" translatable="false">Retry</string>
    <string name="empty_posts" translatable="false">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="like_error" translatable="false">Ошибка добавления лайка</string>
    <string name="unlike_error" translatable="false">Ошибка удаления лайка</string>
    <string name="remove_error" translatable="false">Ошибка удаления поста</string>
    <string name="save_error" translatable="false">Ошибка добавления поста</string>
    <string name="newer_button" translatable="false">fresh posts</string>
    <string name="menu_save" translatable="false">saveMenu</string>
    <string name="remove" translatable="false">remove</string>
    <string name="description_photo" translatable="false">foto</string>
    <string name="description_select_photo" translatable="false">Select foto</string>
    <string name="description_take_photo" translatable="false">Take foto</string>
    <string name="single_image" translatable="false">single_image</string>
    <string name="sign_in" translatable="false">sign in</string>
    <string name="sign_up" translatable="false">sign up</string>
    <string name="sign_out" translatable="false">sign out</string>
    <string name="Login" translatable="false">login</string>
    <string name="Password" translatable="false">password</string>
    <string name="Sign_in" translatable="false">Sign in</string>
    <string name="Auth_error" translatable="false">Auth error</string>
    <string name="ad_description" translatable="false">Ad</string>
</resources>